# peoplesoft-mcp-fin

./: .env.example  .gitignore  LICENSE  README.md  db.py  llm.py  peoplesoft_fin_server.py  peoplesoft_server.py  pyproject.toml  run_peoplesoft_fin_mcp.sh  run_tests.sh  uv.toml
.cursor/: mcp.json
docs/: mcp-enhancement-research-report.md  peoplesoft-sql-metadata-research.md  peoplesoft_fin_concepts.md  peoplesoft_fin_schema_guide.md  peopletools-tables-by-tool.md  peopletools_guide.md  sql_query_examples_fin.md
front-end/: .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front-end/src/: main.ts  style.css
tests/: test_business_questions.py  test_import.py  test_peopletools_questions.py  test_prevalidation.py
tools/: __init__.py  ap.py  ar.py  assets.py  currency.py  gl.py  introspection.py  peopletools.py  performance.py  purchasing.py
